# pico-jvm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cldc/src/include/: jvmconfig.h
cldc/src/vm/cpu/c/: Addressing_c.cpp  BinaryAssembler_c.cpp  Bytes_c.hpp  CodeOptimizer_c.cpp  CompilationQueue_c.cpp  CompiledMethodDesc_c.cpp  CompiledMethod_c.cpp  Debug_c.cpp  Disassembler_c.cpp  FloatSupport_c.cpp  Frame_c.cpp  GlobalDefinitions_c.cpp  GlobalDefinitions_c.hpp  InterpreterRuntime_c.cpp  Interpreter_c.cpp
cldc/src/vm/os/linux/: BuildFlags_linux.hpp  JVM_linux.cpp  Main_linux.cpp  MemoryMonitorMd_linux.cpp  OS_linux.cpp  OS_linux.hpp  OsFile_linux.cpp  OsFile_linux.hpp  OsMemory_linux.cpp  OsMisc_linux.cpp
cldc/src/vm/os/pico/: BuildFlags_pico.hpp  Globals_pico.hpp  JVM_pico.cpp  Main_pico.cpp  OS_pico.cpp  OsFile_pico.cpp  OsFile_pico.hpp  OsMemory_pico.cpp  OsMisc_pico.cpp
cldc/src/vm/share/ROM/: BinaryROM.cpp  BytecodeOptimizer.cpp  ConstantPoolRewriter.cpp  MethodInvocationClosure.cpp  MethodInvocationClosure.hpp  ROM.cpp  (+23 more)
examples/adc/: build.xml
examples/adc/src/: Main.java
examples/blink/: build.xml
examples/blink/src/: Main.java
examples/gpio/: build.xml
examples/gpio/src/: Main.java
lib/: CMakeLists.txt
lib/src/javaapi/device/pico/hardware/: ADCChannel.java
lib/src/vm/cpu/c/: Addressing_c.cpp  Debug_c.cpp  Disassembler_c.cpp  FPURegisterMap_c.cpp  FloatSupport_c.cpp  Frame_c.cpp  Frame_c.hpp  InterpreterRuntime_c.cpp  Interpreter_c.cpp
lib/src/vm/os/linux/: BuildFlags_linux.hpp  Globals_linux.hpp  JVM_linux.cpp  Main_linux.cpp  MemoryMonitorMd_linux.cpp  OS_linux.cpp  OsFile_linux.cpp  OsMemory_linux.cpp  OsMisc_linux.cpp  OsSocket_linux.cpp
lib/src/vm/os/pico/: BuildFlags_pico.hpp  Main_pico.cpp  OsFile_pico.cpp  OsFile_pico.hpp
lib/src/vm/share/ROM/: BinaryObjectWriter.cpp  BinaryROMWriter.cpp  BinaryROMWriter.hpp  BytecodeOptimizer.cpp  BytecodeOptimizer.hpp  ConstantPoolRewriter.cpp  ConstantPoolRewriter.hpp  ROM.hpp  ROMImage.hpp  ROMInliner.cpp  ROMInliner.hpp  ROMMemberPatternMatcher.cpp  ROMMethodPatternMatcher.cpp  ROMProfile.hpp  ROMStructsWriter.cpp  ROMStructsWriter.hpp  ROMTools.cpp  ROMTools.hpp  ROMWriter.hpp  SegmentedSourceROMWriter.cpp  SourceObjectWriter.cpp  SourceROMOptimizer.cpp  SourceROMWriter.cpp  SourceROMWriter.hpp
lib/src/vm/share/compiler/: Addressing.cpp  BinaryLabel.cpp  BytecodeClosure.hpp  Compiler.hpp  CompilerObject.cpp  LiteralPoolElement.cpp  Location.cpp  VSFMergeTest.cpp  Value.cpp
lib/src/vm/share/debugger/: JavaDebugger.cpp  JavaDebugger.hpp  LineVarTable.hpp  MemoryMonitor.cpp  MemoryMonitorMd.cpp
lib/src/vm/share/float/: Cosine_kernel.cpp  FloatNatives.cpp  FloatNatives.hpp  IEEE754_fmod.cpp  IEEE754_rem_pio2.cpp  IEEE754_sqrt.cpp  JFP_lib_asin.cpp  JFP_lib_atan.cpp  JFP_lib_ceil.cpp  JFP_lib_cos.cpp  JFP_lib_floor.cpp  JFP_lib_scalbn.cpp  JFP_lib_sin.cpp  JFP_lib_tan.cpp  Remainder_pio2_kernel.cpp  Sine_kernel.cpp  Tangent_kernel.cpp
lib/src/vm/share/handles/: Array.cpp  ArrayClass.cpp  ArrayClass.hpp  Boundary.hpp  Buffer.hpp  CallInfo.cpp  ClassInfo.cpp  ClassInfo.hpp  ClassParserState.cpp  CompiledMethod.cpp  CompiledMethod.hpp  ConstantPool.cpp  ConstantPool.hpp  ExecutionStack.hpp  FarClass.cpp  Instance.cpp  Instance.hpp  InstanceClass.cpp  JavaClassObj.cpp  JavaClassObj.hpp  JavaOop.cpp  MetaObjType.cpp  Method.cpp  Method.hpp  MixedOop.hpp  NearClass.hpp  ObjArray.cpp  ObjArray.hpp  ObjArrayClass.cpp  ObjNear.cpp  Oop.cpp  Oop.hpp  OopVisitor.cpp  OopVisitor.hpp  ROMizerHashEntry.cpp  ROMizerHashEntry.hpp  Signature.cpp  StackmapList.cpp  StackmapList.hpp  String.hpp  (+12 more)
lib/src/vm/share/interpreter/: GPSkeleton.cpp  InterpreterRuntime.hpp  OopMaps.cpp  OopMapsSkeleton.cpp
lib/src/vm/share/memory/: Allocation.hpp  ArrayClassDesc.cpp  ArrayClassDesc.hpp  ArrayDesc.hpp  ClassInfoDesc.hpp  CompiledMethodCache.cpp  CompiledMethodDesc.cpp  EntryActivationDesc.hpp  ExecutionStackDesc.cpp  ExecutionStackDesc.hpp  FarClassDesc.hpp  FileDecoderDesc.hpp  FinalizerConsDesc.cpp  FinalizerConsDesc.hpp  InstanceClassDesc.hpp  InstanceDesc.hpp  JavaClassDesc.hpp  JavaDesc.hpp  JavaNearDesc.hpp  MetaObjTypeDesc.hpp  MethodDesc.cpp  MixedOopDesc.cpp  NearClassDesc.hpp  NearDesc.hpp  ObjArrayClassDesc.hpp  ObjectHeap.cpp  OopDesc.cpp  OopDesc.inline.hpp  StackmapGenerator.hpp  StackmapListDesc.cpp  StackmapListDesc.hpp  SymbolDesc.hpp  TypeArrayClassDesc.hpp
lib/src/vm/share/natives/: BSDSocket.cpp  JniImpl.hpp  KniImpl.hpp  PCSLSocket.cpp  ReflectNatives.cpp  kvmcompat.cpp
lib/src/vm/share/runtime/: ClassFileParser.cpp  ClassFileParser.hpp  ClassPathAccess.hpp  DeadlockFinder.hpp  Field.cpp  FileDecoder.cpp  FileDecoder.hpp  Frame.hpp  HotRoutines0.cpp  HotRoutines1.cpp  Inflate.cpp  JVM.cpp  JVM.hpp  JarFileParser.hpp  JavaVTable.cpp  MethodTrap.cpp  OS.cpp  OsFile.hpp  OsMemory.cpp  Profiler.cpp  Scheduler.cpp  Scheduler.hpp  Semaphore.cpp  Semaphore.hpp  Synchronizer.hpp  SystemDictionary.cpp  SystemDictionary.hpp  Task.hpp  TaskContext.cpp  TaskContext.hpp  Thread.cpp  Throw.cpp  Throwable.cpp  Throwable.hpp
lib/src/vm/share/utilities/: AccessFlags.cpp  AccessFlags.hpp  Arguments.cpp  BuildFlags.hpp  BytecodeHistogram.cpp  BytecodeHistogram.hpp  BytecodePrintClosure.cpp  BytecodePrintClosure.hpp  CharacterStream.cpp  CharacterStream.hpp  ConstantTag.cpp  ErrorMessage.cpp  GlobalDefinitions.cpp  GlobalDefinitions.hpp  GlobalDefinitions_gcc.hpp  Globals.cpp  Globals.hpp  JvmConst.hpp  PairHistogram.cpp  PairHistogram.hpp  StackUtils.hpp  Stream.hpp  Timer.hpp
lib/src/vm/share/verifier/: Verifier.cpp  Verifier.hpp  VerifierDefinitions.hpp  VerifierFrame.cpp  VerifierFrame.hpp  VerifyMethodCodes.hpp
lib/tools/preverify/: CMakeLists.txt
lib/tools/preverify/src/: check_code.c  file.c  jar_support.c  main.c  sys_api.h  typedefs_md.h
lib/tools/romgen/: CMakeLists.txt
src/linux/: OS.cpp
src/pico/: Main.cpp  Natives.cpp  OS.cpp
test/: Main.java
tools/: flash.sh  reboot.sh  run_minicom.sh  wrapjar.sh
tools/preverify/: CMakeLists.txt
tools/romgen/: CMakeLists.txt
(+240 files in other folders)
